--- a/reportcompiler_ic_tools/templates/hpv-infocentre/ic_table.tex
+++ b/reportcompiler_ic_tools/templates/hpv-infocentre/ic_table.tex
@@ -27,7 +27,7 @@
 \rowcolor{ColorTable}
 \BLOCK{for c in ctx.columns -}
     \textbf{
-        \VAR{-c.name | escape_tex-}
+        \VAR{-c.value | escape_tex-}
         \BLOCK{-if c.markers-}
             $^{\VAR{c.markers | join(',')}}$
         \BLOCK{-endif-}
@@ -58,69 +58,4 @@
 \BLOCK{endfor-}
 \end{longtable}
 
-{\footnotesize
-\BLOCK{if ctx.footer.date.date_accessed}
-% External data source
-\textbf{Original publication: 
-\VAR{ctx.footer.date.date_closing | format_date('%e %b %Y')}} \\
-\textbf{Last accessed:
-\VAR{ctx.footer.date.date_accessed | format_date('%e %b %Y')}} \\
-\BLOCK{-else}
-% Internal data source
-\textbf{Closing database date: 
-\VAR{ctx.footer.date.date_closing | format_date('%e %b %Y')}} \\
-\textbf{First publication date:
-\VAR{ctx.footer.date.date_publication | format_date('%e %b %Y')}} \\
-\BLOCK{-endif}
-\BLOCK{if ctx.footer.sources}
-    \textbf{Sources}: \\
-    \BLOCK{for f in ctx.footer.sources}
-        \BLOCK{if f.marker != ''}
-$^{\VAR{f.marker | escape_tex}}$ 
-        \BLOCK{-else-}
--
-        \BLOCK{-endif}
- \VAR{f.text | escape_tex} \\
-    \BLOCK{endfor}
-    \\
-\BLOCK{endif}
-
-\BLOCK{if ctx.footer.notes}
-    \textbf{Notes}: \\
-    \BLOCK{for f in ctx.footer.notes}
-        \BLOCK{if f.marker != ''}
-$^{\VAR{f.marker | escape_tex}}$
-        \BLOCK{-else-}
--
-        \BLOCK{-endif}
- \VAR{f.text | escape_tex} \\
-    \BLOCK{endfor}
-    \\
-\BLOCK{endif}
-
-\BLOCK{if ctx.footer.methods}
-    \textbf{Methods}: \\
-    \BLOCK{for f in ctx.footer.methods}
-        \BLOCK{if f.marker != ''}
-$^{\VAR{f.marker | escape_tex}}$
-        \BLOCK{-else-}
--
-        \BLOCK{-endif}
- \VAR{f.text | escape_tex} \\
-    \BLOCK{endfor}
-    \\
-\BLOCK{endif}
-
-\BLOCK{if ctx.footer.years}
-    \textbf{Years}: \\
-    \BLOCK{for f in ctx.footer.years}
-        \BLOCK{if f.marker != ''}
-$^{\VAR{f.marker | escape_tex}}$
-        \BLOCK{-else-}
--
-        \BLOCK{-endif}
- \VAR{f.text | escape_tex} \\
-    \BLOCK{endfor}
-    \\
-\BLOCK{endif}
-}
+\BLOCK{include '/hpv-infocentre/ic_references.tex'}
